修改新建时，输入内容的限制

--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -160,12 +160,12 @@
 					selectPeople: []
 				},
 				computed: {
-    // 计算属性的 getter
-    peopleNum: function () {
-      // `this` 指向 vm 实例
-      return this.selectPeople.length>0? this.selectPeople.length+'人':'点击选择接收人'
-    }
-  },
+					// 计算属性的 getter
+					peopleNum: function() {
+						// `this` 指向 vm 实例
+						return this.selectPeople.length > 0 ? this.selectPeople.length + '人' : '点击选择接收人'
+					}
+				},
 				methods: {
 					selectFile: function(event) { //从手机中选择图片后到界面的回调
 						// 如果没有选中文件，直接返回  
@@ -209,15 +209,15 @@
 					},
 					selectPepole: function() {
 						var data = {
-							flag: 1 ,//1 通知公告
-							selectPeople:message.selectPeople
+							flag: 1, //1 通知公告
+							selectPeople: message.selectPeople
 						}
 						console.log(JSON.stringify(data));
 						utils.mOpenWithData("selectPeople.html", data)
 					}
 				}
 			})
-						var uptokenData;
+			var uptokenData;
 			var qnFileUploader; //七牛上传控件对象
 			initQNUploader();
 
@@ -402,67 +402,91 @@
 					$.toast("内容不能超过500字", "cancel");
 					return;
 				}
+				//判断输入是否符合要求
+				if(checkInput(message.title)) {
+					if(checkInput(message.content)) {
+						//附件数组
+						var nameArr = [];
+						var addrArr = []
 
-				//附件数组
-				var nameArr = [];
-				var addrArr = []
+						for(var i = 0; i < message.uploadedFiles.length; i++) {
+							var tempValue = message.uploadedFiles[i];
+							nameArr.push(tempValue.NewName);
+							addrArr.push(tempValue.ImgUrl);
+						}
+						var noticEncName = nameArr.join("|")
+						var noticeEncAddr = addrArr.join("|")
+						var smsSync = message.smsSync == true ? 1 : 0
 
-				for(var i = 0; i < message.uploadedFiles.length; i++) {
-					var tempValue = message.uploadedFiles[i];
-					nameArr.push(tempValue.NewName);
-					addrArr.push(tempValue.ImgUrl);
-				}
-				var noticEncName = nameArr.join("|")
-				var noticeEncAddr = addrArr.join("|")
-				var smsSync = message.smsSync == true ? 1 : 0
-				
-				var personal = store.get(window.storageKeyName.PERSONALINFO);
-				var selectPeople_arr = message.selectPeople;
-				var ids = [];
-				var codes = [];
-				var names = [];
-				for(var i = 0; i < selectPeople_arr.length; i++) {
-					var model = selectPeople_arr[i];
-					ids.push(model.utid)
-					codes.push('')
-					names.push(model.utname)
-				}
-				if(ids.length == 0) {
-					$.toast("请选择接收人", "cancel");
-					return;
-				}
-				$.showLoading('加载中...');
-				var tempData = {
-					schoolId: storageKeyName.SCHOOLID, //学校ID
-					noticeTitle: message.title, //标题
-					noticeContent: message.content, //内容
-					noticEncName: noticEncName, //附件名称
-					noticeEncAddr: noticeEncAddr, //附件地址
-					smsSync: smsSync, //是否短信同步
-					sendManId: personal.utid, //发布人ID
-					sendManCode: personal.uid, //发布人账号
-					sendManName: personal.utname, //发布人姓名
-					receiveManIds: ids, //接收人人ID
-					receiveManCodes: codes, //接收人账号
-					receiveManNames: names, //接收人姓名
-				}
-				addNoticePro(tempData, function function_name(data) {
-					$.hideLoading();
-					console.log(JSON.stringify(data))
-					if(data.RspCode == 0) {
-						
-						mui.toast("发布成功")
-						mui.back();
-					} else {
+						var personal = store.get(window.storageKeyName.PERSONALINFO);
+						var selectPeople_arr = message.selectPeople;
+						var ids = [];
+						var codes = [];
+						var names = [];
+						for(var i = 0; i < selectPeople_arr.length; i++) {
+							var model = selectPeople_arr[i];
+							ids.push(model.utid)
+							codes.push('')
+							names.push(model.utname)
+						}
+						if(ids.length == 0) {
+							$.toast("请选择接收人", "cancel");
+							return;
+						}
+						$.showLoading('加载中...');
+						var tempData = {
+							schoolId: storageKeyName.SCHOOLID, //学校ID
+							noticeTitle: message.title, //标题
+							noticeContent: message.content, //内容
+							noticEncName: noticEncName, //附件名称
+							noticeEncAddr: noticeEncAddr, //附件地址
+							smsSync: smsSync, //是否短信同步
+							sendManId: personal.utid, //发布人ID
+							sendManCode: personal.uid, //发布人账号
+							sendManName: personal.utname, //发布人姓名
+							receiveManIds: ids, //接收人人ID
+							receiveManCodes: codes, //接收人账号
+							receiveManNames: names, //接收人姓名
+						}
+						addNoticePro(tempData, function function_name(data) {
+							$.hideLoading();
+							console.log(JSON.stringify(data))
+							if(data.RspCode == 0) {
 
+								mui.toast("发布成功")
+								mui.back();
+							} else {
+
+							}
+						});
 					}
-				});
+				}
 			}
 			window.addEventListener('selectPeople', function(data) {
 				console.log("data" + JSON.stringify(data.detail.peopleArray))
 				message.selectPeople = data.detail.peopleArray;
 
-			})
+			});
+			//判断是否输入了值
+			var checkInput = function(text) {
+				if(text.trim().length == 0) {
+					mui.toast('请输入标题或内容');
+					return false;
+				}
+				if(isNull(text)) {
+					mui.toast('请输入标题或内容');
+					return false;
+				}
+				return true;
+			}
+
+			//判断输入字符串是否为空或者全部都是空格
+			function isNull(str) {
+				if(str == "") return true;
+				var regu = "^[ ]+$";
+				var re = new RegExp(regu);
+				return re.test(str);
+			}
 		</script>
 	</body>
 
