--- a/wisdomCampus/html/all.html
+++ b/wisdomCampus/html/all.html
@@ -267,6 +267,7 @@
 						} else {
 							model.SendManName = model.SendManName + "|"
 							noticep = model.NoticeStatus
+							li.id = model.NoticeManId
 						}
 
 						var readcolor = 'red';
