--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -18,7 +18,7 @@
 				border-radius: 100px;
 				background-color: red;
 				margin-top: -40px;
-				margin-left: -20px;
+				margin-right: -10px;
 			}
 			
 			.circular-square {
@@ -161,6 +161,9 @@
 		<script type="text/javascript" src="../js/utils/storageKeyName.js"></script>
 		<script src='../js/lib/vconsole/vconsole.min.js'></script>
 		<script src="../js/home.js"></script>
+		<script src="../js/publicProtocol.js"></script>
+		<script src="../js/demoCssJs/jquery-2.1.4.js"></script>
+		<script src="../js/demoCssJs/jquery-weui.js"></script>
 		<!--加密-->
 		<script src="../js/lib/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../js/lib/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
@@ -183,22 +186,57 @@
 			addStrip(getImgArray())
 			//加图片
 			addImg(getImgArray(), titles)
+			getHomeCircle('circler');
 			var slider = mui("#slider");
 			//轮播开始
 			slider.slider({
 				interval: 5000
 			});
-			//圆圈按钮
-			getHomeCircle('circler');
+			var personal = store.get(window.storageKeyName.PERSONALINFO);
+			var tempData = {
+				schoolId: storageKeyName.SCHOOLID, //学校ID
+				receiveManId: personal.utid
+			}
+			getNoReadCntByManPro(tempData, function function_name(data) {
+				console.log(JSON.stringify(data))
+				$.hideLoading();
+				if(data.RspCode == 0) {
+					var noRead = document.getElementById("noRead_1");
+					noRead.innerHTML = data.RspData.NoReadCnt;
+					if(data.RspData.NoReadCnt!=0){
+						noRead.className = "mui-badge"
+					}
+				}
+			});
+			
+			tempData = {
+				schoolId: storageKeyName.SCHOOLID, //学校ID
+				approveManId: personal.utid
+			}
+			getNoApproveCntByManPro(tempData, function function_name(data) {
+				console.log(JSON.stringify(data))
+				$.hideLoading();
+				if(data.RspCode == 0) {
+					var noRead = document.getElementById("noRead_2");
+					noRead.innerHTML = data.RspData.NoApproveCnt;
+					if(data.RspData.NoReadCnt!=0){
+						noRead.className = "mui-badge"
+					}
+				}
+			});
+
 			mui(".mui-table-view").on('tap', 'a', function() {
 				var id = this.parentElement.id
 				if(id == 1 || id == 2) {
+					
 					//检查是否有权限
 					if(checkPermission()) {
 						console.log('1111');
 						mui.toast("无此权限");
 					} else {
 						console.log('22222');
+						var noRead = document.getElementById("noRead_"+id);
+						noRead.className = "mui-badge mui-hidden"
 						utils.mOpenWithData("all.html", id)
 					}
 
