--- a/wisdomCampus/html/noticeDetails.html
+++ b/wisdomCampus/html/noticeDetails.html
@@ -96,6 +96,12 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">通知详情</h1>
 		</header>
+		<nav class="mui-bar mui-bar-tab" style="padding-bottom: 0px;" id="noticeReplyContent">
+					<div style="padding-top: 5px;">
+						<input v-model="content" type="text" style="border: 0px;margin-bottom: 0px;margin-left: 5px;width: 70%;font-size: 12px;" placeholder="请输入要回复的内容" />
+						<button v-on:click.stop="replyContent()" type="button" class="mui-btn-primary down-btn" style="width: 20%;margin-top: 5px;">确定</button>
+					</div>
+				</nav>
 		<div class="mui-content" id="noticeDetailData" v-show="flag>0" style="background-color: white;">
 			<template>
 				<p align="center" class="titleCSS" style="font-size: 18px;color: #000;margin-top: 10px;">{{detailModel.NoticeTitle}}</p>
@@ -129,12 +135,7 @@
 					<input type="text" class="same text" style="display: inline;float: left;"><button class="same btn">查询</button>
 				</div>-->
 				<!--<input v-model="" style="border: 0px;margin-bottom: 0px;padding-left: 0px;" type="text" placeholder="请输入标题" />-->
-				<nav class="mui-bar mui-bar-tab" style="margin-bottom: 0px;">
-					<div style="padding-top: 5px;">
-						<input v-model="content" type="text" style="border: 0px;margin-bottom: 0px;margin-left: 5px;width: 70%;font-size: 12px;" placeholder="请输入要回复的内容" />
-						<button v-on:click.stop="replyContent()" type="button" class="mui-btn-primary down-btn" style="width: 20%;margin-top: 5px;">确定</button>
-					</div>
-				</nav>
+				
 
 				<!--滑动组件-->
 				<!--<div id="sliderSegmentedControl" class=" mui-segmented-control mui-segmented-control-inverted mui-segmented-control-primary">
@@ -194,31 +195,43 @@
 
 			var getDetailFunction = function() {
 				if(curPage.flag == 0) { //0发给我的
-					getNoticeByReceiveIdDetail(curPage.id);
+					getNoticeByReceiveIdDetail();
 				} else { //1我发送的
-					getNoticeDetail(curPage.id);
+					getNoticeDetail();
 				}
 			}
-
 			var noticeDetailData = new Vue({
 				el: "#noticeDetailData",
 				data: {
 					flag: 0,
-					detailModel: '',
-					content: ''
+					detailModel: ''
 				},
 				methods: {
 					checkEnc: function(tempFlag, index) {
 						console.log('tempFlag:' + tempFlag);
 						var tempUrl = noticeDetailData.detailModel.NoticeEncAddr[index];
 						plus.runtime.openURL(tempUrl);
-					},
+					}
+				}
+			});
+
+			var noticeReplyContent = new Vue({
+				el: "#noticeReplyContent",
+				data: {
+					content: ''
+				},
+				methods: {
 					replyContent: function() {
-						if(noticeDetailData.content.trim().length == 0) {
+						if(noticeDetailData.detailModel.ReplyContent.length > 0) {
+							noticeReplyContent.content = '';
+							$.toast("不能重复回复", "cancel");
+							return;
+						}
+						if(noticeReplyContent.content.trim().length == 0) {
 							$.toast("请输入回复内容", "cancel");
 							return;
 						}
-						if(noticeDetailData.content.length >= 50) {
+						if(noticeReplyContent.content.length >= 50) {
 							$.toast("回复内容不能超过50字", "cancel");
 							return;
 						}
@@ -226,14 +239,14 @@
 						var tempData1 = {
 							noticeId: curPage.id, //通知ID
 							receiveManId: personal.utid, //阅读人ID
-							replyContent: noticeDetailData.content //回复内容
+							replyContent: noticeReplyContent.content //回复内容
 						}
 						$.showLoading();
 						//9.阅读通知公告
 						setNoticeReadPro(tempData1, function function_name(data) {
 							$.hideLoading();
 							if(data.RspCode == 0) {
-								noticeDetailData.content = '';
+								noticeReplyContent.content = '';
 								$.toast('成功');
 								getDetailFunction();
 							} else {
@@ -245,11 +258,11 @@
 			});
 
 			//12.通过通知公告ID获取通知公告(我发送的)
-			var getNoticeDetail = function(id) {
+			var getNoticeDetail = function() {
 				$.showLoading();
 				//12.通过ID获取通知公告
 				var tempData = {
-					noticeId: id //通知ID
+					noticeId: curPage.id //通知ID
 				}
 				getNoticeByIdPro(tempData, function function_name(data) {
 					$.hideLoading();
@@ -266,7 +279,7 @@
 						if(data.RspData.ReadStatus == 0) { //已读状态,1 已读,0 未读
 							//9.修改阅读状态
 							var tempData1 = {
-								noticeId: id, //通知ID
+								noticeId: curPage.id, //通知ID
 								receiveManId: personal.utid, //阅读人ID
 								replyContent: '' //回复内容
 							}
@@ -282,10 +295,10 @@
 			}
 
 			//25.通过通知接收表ID获取通知公告(我接收的)
-			var getNoticeByReceiveIdDetail = function(id) {
+			var getNoticeByReceiveIdDetail = function() {
 				$.showLoading();
 				var tempData = {
-					noticeManId: id //通知接收表ID
+					noticeManId: curPage.NoticeManId //通知接收表ID
 				}
 				getNoticeByReceiveIdPro(tempData, function function_name(data) {
 					$.hideLoading();
@@ -302,7 +315,7 @@
 						if(data.RspData.ReadStatus == 0) { //已读状态,1 已读,0 未读
 							//9.修改阅读状态
 							var tempData1 = {
-								noticeId: id, //通知ID
+								noticeId: curPage.id, //通知ID
 								receiveManId: personal.utid, //阅读人ID
 								replyContent: '' //回复内容
 							}
