--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -242,6 +242,7 @@
 
 					//					utils.hrefSessionStorage("all.html", id);
 				} else {
+					utils.mOpenWithData("ReadQRCode.html", id)
 					mui.toast("此功能暂未开放");
 				}
 			});
