--- a/wisdomCampus/html/all.html
+++ b/wisdomCampus/html/all.html
@@ -105,7 +105,7 @@
 		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 id="ntitle" class="mui-title" style="color: white;">通知公告</h1>
-			<a onclick="add()" class="mui-icon  mui-pull-right" style="color: white;font-size: 25px;">+</a>
+			<a id="add" onclick="add()" class="mui-icon  mui-pull-right mui-hidden" style="color: white;font-size: 25px;">+</a>
 		</header>
 		<nav class="mui-bar mui-bar-tab">
 
@@ -187,6 +187,12 @@
 		<script>
 			var tempInfo00 = store.get(window.storageKeyName.PERSONALINFO);
 			console.log(JSON.stringify(tempInfo00))
+			var add = document.getElementById("add")
+			if(tempInfo00.appeditstat==0){
+				add.className = "mui-icon  mui-pull-right mui-hidden"
+			}else{
+				add.className = "mui-icon  mui-pull-right"
+			}
 			var current_key = {
 				title: 'notice',
 				send_recevice: 'recevice'
