--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -446,7 +446,7 @@
 							sendManName: personal.utname, //发布人姓名
 							receiveManIds: ids, //接收人人ID
 							receiveManCodes: codes, //接收人账号
-							receiveManNames: names, //接收人姓名
+							receiveManNames: names //接收人姓名
 						}
 						addNoticePro(tempData, function function_name(data) {
 							$.hideLoading();
